--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "images/headshot.jpg"
+  avatar           : "/images/profile.png"
   name             : "Elisa Mogollon Perez"
   pronouns         : "she/her"  
   bio              : "Evolutionary Biology DPhil"
