--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,10 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "/images/profile.png"
+  avatar           : # "profile.png"
   name             : "Elisa Mogollon Perez"
   pronouns         : "she/her"  
-  bio              : "Evolutionary Biology DPhil"
+  bio              : "Evolutionary Biology PhD"
   location         : "Department of Biology"
   employer         : "University of Oxford"
   uri              : # URL
