--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Elisa Mogollon Perez"
 title_separator          : "-"
 name                     : &name "Elisa A. Mogollon Perez"
 description              : &description "Graduate student - University of Oxford"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://elisamaranta.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
